# pyberryplc-cnc

./: .gitignore  README.md  pyproject.toml
demos/demo_1/: cnc_demo.py  create_trajectory.py  motor_config.toml  run_demo.sh
docs/: cnc_plc_demo.md  trajectory_compiler_explained.md
src/pyberryplc_cnc/: __init__.py  controller.py  trajectory.py  trajectory_compiler.py  ui.py
tests/: test_demo_1.py  test_public_api.py  test_trajectory.py
